added tensorboard and implemented data collection, increased deep_mri to 50-layers

--- a/src/cae/config/classify.yaml
+++ b/src/cae/config/classify.yaml
@@ -12,6 +12,7 @@ verbose: False
 # label_col: DX
 
 label_path: outputs/normalized_mapping.pickle
+# image_col: [ gray_matter_path ]
 image_col: [ gray_matter_path, white_matter_path, csf_path ]
 label_col: label
 
@@ -27,22 +28,23 @@ model:
 
 pretrain:
     num_epochs: 0
-    batch_size: 10
+    batch_size: 6
 
 train:
-    num_epochs: 200
+    num_epochs: 100
     optim:
         learn_rate: 0.01
-        weight_decay: 0.00001
-    batch_size: 10
+        weight_decay: 0.0001
+        momentum: 0.9
+    batch_size: 8
     print_iter: 5
     save_model: True
 
 valid:
-    batch_size: 10
+    batch_size: 8
 
 test:
-    batch_size: 10
+    batch_size: 8
 
 
-remarks: Using deep MRI with all three maps images.
+remarks: 50-layer network with dropout at 0.2
