--- a/src/cae/config/classify.yaml
+++ b/src/cae/config/classify.yaml
@@ -16,14 +16,14 @@ image_col: [ gray_matter_path, white_matter_path, csf_path ]
 label_col: label
 
 data:
-    set_name: normalized
+    set_name: 2d
     max_workers: 8
     valid_split: 0.2
     test_split: 0.2
     limit: -1
 
 model:
-    class: deep_mri
+    class: 2d
 
 pretrain:
     num_epochs: 0
@@ -32,17 +32,17 @@ pretrain:
 train:
     num_epochs: 200
     optim:
-        learn_rate: 0.01
-        weight_decay: 0.00001
-    batch_size: 10
+        learn_rate: 0.0005
+        weight_decay: 0.0
+    batch_size: 8
     print_iter: 5
     save_model: True
 
 valid:
-    batch_size: 10
+    batch_size: 8
 
 test:
-    batch_size: 10
+    batch_size: 8
 
 
 remarks: Using deep MRI with all three maps images.
