--- a/src/cae/config/3d_classify.yaml
+++ b/src/cae/config/3d_classify.yaml
@@ -18,10 +18,10 @@ label_col: label
 
 data:
     set_name: normalized
-    max_workers: 0
+    max_workers: 6
     valid_split: 0.2
     test_split: 0.1
-    limit: 20
+    limit: -1
 
 model:
     class: deep_ae_mri
@@ -29,24 +29,25 @@ model:
     num_blocks: [1, 1, 1, 1, 1]
 
 pretrain:
-    num_epochs: 1
-    batch_size: 4
+    num_epochs: 200
+    batch_size: 6
 
 train:
     optim:
         learn_rate: 0.01
         weight_decay: 0.0001
         momentum: 0.9
-    num_epochs: 1
-    batch_size: 8
+    num_epochs: 40
+    batch_size: 20
     print_iter: 5
     save_model: True
+    freeze_cnn: True
 
 valid:
-    batch_size: 8
+    batch_size: 20
 
 test:
-    batch_size: 8
+    batch_size: 20
 
 
 remarks: 21-layers without gloabl average pooling and uses SGD
