--- a/src/cae/config/3d_classify.yaml
+++ b/src/cae/config/3d_classify.yaml
@@ -29,20 +29,29 @@ model:
     num_blocks: [1, 1, 1, 1, 1]
 
 pretrain:
-    num_epochs: 200
+    optim:
+        name: adam
+        learn_rate: 0.0001
+        weight_decay: 0.00001
+        momentum: 0.9
+    num_epochs: 40
     batch_size: 4
-    sparsity: 0.0
+    print_iter: 4
+    sparsity: 0.0003
 
 train:
     optim:
-        learn_rate: 0.01
-        weight_decay: 0.000001
+        name: adam
+        learn_rate: 0.0001
+        weight_decay: 0.00001
         momentum: 0.9
-    num_epochs: 40
-    batch_size: 20
+    num_epochs: 60
+    batch_size: 16
     print_iter: 1
     save_model: True
     freeze_cnn: True
+    cnn_dropout: 0.0
+    class_dropout: 0.2
 
 valid:
     batch_size: 20
