--- a/src/cae/config/3d_classify.yaml
+++ b/src/cae/config/3d_classify.yaml
@@ -12,25 +12,29 @@ verbose: False
 # label_col: DX
 
 label_path: outputs/normalized_mapping.pickle
-mask_path: /mnt/nfs/work1/mfiterau/zguan/clinica_data/mask_ICV.nii
+# mask_path: /mnt/nfs/work1/mfiterau/zguan/clinica_data/mask_ICV.nii
 # image_col: [ gray_matter_path ]
-# image_col: [ gray_matter_path, white_matter_path, csf_path ]
-image_col: [ misc ]
+image_col: [ gray_matter_path, white_matter_path, csf_path ]
+# image_col: [ misc ]
 label_col: label
 
 data:
     set_name: normalized
     # 2D vs 3D
     num_dim: 3
+    slice_view: coronal
+    # can specify one or three slice indices
+    # If one slice index is specified and one image_col is specified, the resulting slice is repeated and stacked so there are 3 channels.
+    # Otherwise either three image-cols, or three slice_nums can be specified, leading to a three channel image.
+    slice_num: [ 78, 88, 98 ]
     max_workers: 0
     valid_split: 0.1
     test_split: 0.1
-    limit: -1
-    transforms: [
+    limit: 30
+    transforms:
         pad_to_same: True,
         nan_to_num: 0,
         range_norm: True
-    ]
 
 model:
     class: deep_ae_mri
@@ -54,7 +58,7 @@ train:
         learn_rate: 0.001
         weight_decay: 0.0
         momentum: 0.9
-    num_epochs: 60
+    num_epochs: 1
     batch_size: 4
     print_iter: 1
     save_model: True
