--- a/src/cae/config/2d_classify.yaml
+++ b/src/cae/config/2d_classify.yaml
@@ -4,10 +4,10 @@ verbose: False
 # path to the label file, relative to the src/cae/ path.
 
 label_path: outputs/normalized_mapping.pickle
-mask_path: /mnt/nfs/work1/mfiterau/zguan/clinica_data/mask_ICV.nii
+# mask_path: /mnt/nfs/work1/mfiterau/zguan/clinica_data/mask_ICV.nii
 # image_col: [ gray_matter_path ]
-# image_col: [ gray_matter_path, white_matter_path, csf_path ]
-image_col: [ misc ]
+image_col: [ gray_matter_path, white_matter_path, csf_path ]
+# image_col: [ misc ]
 label_col: label
 
 data:
@@ -19,7 +19,7 @@ data:
     # can specify one or three slice indices
     # If one slice index is specified and one image_col is specified, the resulting slice is repeated and stacked so there are 3 channels.
     # Otherwise either three image-cols, or three slice_nums can be specified, leading to a three channel image.
-    slice_num: [ 94 ]
+    slice_num: [ 88 ]
     # only one slice is allowed if applying color map
     apply_cmap: False
     max_workers: 4
