--- a/src/cae/config/2d_classify.yaml
+++ b/src/cae/config/2d_classify.yaml
@@ -4,10 +4,10 @@ verbose: False
 # path to the label file, relative to the src/cae/ path.
 
 label_path: outputs/normalized_mapping.pickle
-# mask_path: /mnt/nfs/work1/mfiterau/zguan/clinica_data/mask_ICV.nii
+mask_path: /mnt/nfs/work1/mfiterau/zguan/clinica_data/mask_ICV.nii
 # image_col: [ gray_matter_path ]
-image_col: [ gray_matter_path, white_matter_path, csf_path ]
-# image_col: [ misc ]
+# image_col: [ gray_matter_path, white_matter_path, csf_path ]
+image_col: [ misc ]
 label_col: label
 
 data:
@@ -25,7 +25,7 @@ data:
     max_workers: 4
     valid_split: 0.2
     test_split: 0.2
-    limit: -1
+    limit: 20
     transforms:
         resize: 224
         range_norm: True
@@ -55,7 +55,12 @@ train:
         learn_rate: 0.001
         weight_decay: 0.01
         momentum: 0.9
-    num_epochs: 40
+        use_scheduler: True
+        # decay every n epochs
+        step_size: 2
+        # multiplicative factor applied to learning rate
+        decay_factor: 0.5
+    num_epochs: 100
     batch_size: 16
     print_iter: 1
     save_model: True
