--- a/src/cae/config/2d_classify.yaml
+++ b/src/cae/config/2d_classify.yaml
@@ -19,13 +19,13 @@ data:
     # can specify one or three slice indices
     # If one slice index is specified and one image_col is specified, the resulting slice is repeated and stacked so there are 3 channels.
     # Otherwise either three image-cols, or three slice_nums can be specified, leading to a three channel image.
-    slice_num: [ 88 ]
+    slice_num: [ 92 ]
     # only one slice is allowed if applying color map
     apply_cmap: False
     max_workers: 4
     valid_split: 0.2
     test_split: 0.2
-    limit: 20
+    limit: -1
     transforms:
         resize: 224
         range_norm: True
@@ -55,7 +55,7 @@ train:
         learn_rate: 0.001
         weight_decay: 0.01
         momentum: 0.9
-        use_scheduler: True
+        use_scheduler: False
         # decay every n epochs
         step_size: 2
         # multiplicative factor applied to learning rate
