--- a/src/cae/config/2d_classify.yaml
+++ b/src/cae/config/2d_classify.yaml
@@ -19,7 +19,7 @@ data:
     # can specify one or three slice indices
     # If one slice index is specified and one image_col is specified, the resulting slice is repeated and stacked so there are 3 channels.
     # Otherwise either three image-cols, or three slice_nums can be specified, leading to a three channel image.
-    slice_num: [ 92 ]
+    slice_num: [ 88 ]
     # only one slice is allowed if applying color map
     apply_cmap: False
     max_workers: 4
@@ -32,7 +32,7 @@ data:
         mean_std_norm: False
 
 model:
-    class: resnet18
+    class: densenet121
     # for pretrained models only
     pretrained: True
     # number of residual blocks per group
@@ -59,7 +59,7 @@ train:
         # decay every n epochs
         step_size: 2
         # multiplicative factor applied to learning rate
-        decay_factor: 0.5
+        decay_factor: 0.0
     num_epochs: 100
     batch_size: 16
     print_iter: 1
